# club-kdl

./: .gitignore  .mcp.json  .mise.local.toml  .mise.local.toml.example  .mise.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.en.md  README.ja.md  README.md  ROADMAP.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: kdl_vs_json.rs
codegen/: Cargo.toml
codegen/src/: ir.rs  lib.rs  main.rs
codegen/src/emit/: case.rs  mod.rs  rust.rs  surrealql.rs  typescript.rs  zod.rs
codegen/src/parser/: mod.rs  raw.rs
codegen/tests/: integration.rs
codegen/tests/fixtures/multi-file/: root.kdl  types.kdl
compose/: Cargo.toml
compose/src/: error.rs  lib.rs
compose/tests/: integration.rs
compose/tests/fixtures/as-prefix/: root.kdl  types.kdl
compose/tests/fixtures/bad-deserialize/: root.kdl
compose/tests/fixtures/cycle/: a.kdl
compose/tests/fixtures/deeply-nested/: leaf.kdl  root.kdl
compose/tests/fixtures/except-alone/: root.kdl  types.kdl
compose/tests/fixtures/filters/: root.kdl  types.kdl
compose/tests/fixtures/glob/: root.kdl
compose/tests/fixtures/glob-dir/: root.kdl
compose/tests/fixtures/glob-dir/mixed/: leaf.kdl
compose/tests/fixtures/glob-dir/mixed/sub/: skipped.kdl
compose/tests/fixtures/glob-empty/: root.kdl
compose/tests/fixtures/glob-malformed/: root.kdl
compose/tests/fixtures/glob-with-as/: root.kdl
compose/tests/fixtures/glob-with-as/types/: a.kdl
compose/tests/fixtures/glob/types/: b.kdl
compose/tests/fixtures/included-parse-error/: broken.kdl  root.kdl
compose/tests/fixtures/invalid-missing-path/: root.kdl
compose/tests/fixtures/invalid-variant/: root.kdl
compose/tests/fixtures/missing/: root.kdl
compose/tests/fixtures/multi-directive/: root.kdl
compose/tests/fixtures/multi-directive/parts/: a.kdl  b.kdl
compose/tests/fixtures/nested/: reqs.kdl  root.kdl
compose/tests/fixtures/only-alone/: root.kdl
compose/tests/fixtures/path-dotdot/: shared.kdl
compose/tests/fixtures/path-dotdot/sub/: main.kdl
compose/tests/fixtures/recursive/: a.kdl  b.kdl  c.kdl
compose/tests/fixtures/rename-alone/: root.kdl
compose/tests/fixtures/self-cycle/: a.kdl
compose/tests/fixtures/simple/: child.kdl  root.kdl
crates/unison-kdl/: Cargo.toml
crates/unison-kdl/src/: lib.rs  ser.rs
crates/uproto/: Cargo.toml
crates/uproto/src/: main.rs  schema.rs
crates/uproto/src/codegen/: mod.rs  rust.rs  typescript.rs
derive/: Cargo.toml
derive/src/: lib.rs
doc/: README.md
doc/architecture/: README.md
doc/development/: README.md  local-setup.md
doc/operations/: README.md
docs/guide/: README.en.md  README.ja.md  README.md  best-practices.en.md  best-practices.ja.md  best-practices.md  custom-types.en.md  custom-types.ja.md  custom-types.md  troubleshooting.en.md  troubleshooting.ja.md  troubleshooting.md
examples/: bench.rs
fleets-config/: README.md
fleets-config/base/: kustomization.yaml  namespace.yaml  unison-core-deployment.yaml  unison-core-service.yaml
fleets-config/local/: kustomization.yaml  unison-core-patch.yaml
local/k8s/manifests/: namespace.yaml  test-pod.yaml  unison-core.yaml  unison-demo.yaml
src/: ast.rs  de.rs  error.rs  lib.rs  schema.rs  ser.rs  stream.rs
src/codegen/: mod.rs  rust.rs  typescript.rs
tests/: exhaustive_mapping.rs  integration.rs  ndkdl.rs
