[package]
name = "club-kdl"
description = "Fast KDL (KDL Document Language) serialization/deserialization with derive macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["kdl", "serialization", "derive", "macro"]
categories = ["encoding", "parsing"]
readme = "README.md"

[workspace]
resolver = "2"
members = [".", "derive"]

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["Mako <mito@chronista.club>"]
license = "MIT"
repository = "https://github.com/chronista-club/club-kdl"

[workspace.dependencies]
kdl = "6"
thiserror = "2"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dependencies]
kdl.workspace = true
thiserror.workspace = true
club-kdl-derive = { path = "./derive", version = "0.5.0" }

[dev-dependencies]
criterion = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rkyv = "0.8"

[[bench]]
name = "kdl_vs_json"
harness = false

