[package]
name = "club-kdl-codegen"
description = "Generate Rust / TypeScript / Zod / SurrealQL code from KDL schema files"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["kdl", "codegen", "schema", "typescript"]
categories = ["development-tools", "parsing"]
readme = "../README.md"

# lib 名は bare (chronista-club CONVENTIONS.md 準拠)。
# club-kdl 本体のみ upstream `kdl` crate 衝突回避の例外で `club_kdl`。
[lib]
name = "kdl_codegen"
path = "src/lib.rs"

[[bin]]
name = "club-kdl-codegen"
path = "src/main.rs"

[dependencies]
# parser が KDL schema を club-kdl の KdlDeserialize derive で読む。
# crates.io publish のため path 依存にも version を明示。
club-kdl = { path = "..", version = "0.8.0" }
thiserror.workspace = true

