[package]
name = "club-kdl-codegen"
description = "Generate Rust / TypeScript / Zod / SurrealQL code from KDL schema files"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["kdl", "codegen", "schema", "typescript"]
categories = ["development-tools", "parsing"]
readme = "../README.md"

# lib 名は bare (chronista-club CONVENTIONS.md 準拠)。
# club-kdl 本体のみ upstream `kdl` crate 衝突回避の例外で `club_kdl`。
[lib]
name = "kdl_codegen"
path = "src/lib.rs"

[[bin]]
name = "club-kdl-codegen"
path = "src/main.rs"

[dependencies]
# parser が KDL schema を club-kdl の KdlDeserialize derive で読む。
# crates.io publish のため path 依存にも version を明示。
club-kdl = { path = "..", version = "0.10.0" }
# parse_path / CLI が (<)file / (<)glob directive を解決して複数ファイル
# schema を 1 つの KdlDocument に合成する。(<) を含まない schema には
# no-op なので opt-in flag は持たない。
club-kdl-compose = { path = "../compose", version = "0.10.0" }
kdl.workspace = true
thiserror.workspace = true

